--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.contentstack.sdk</groupId>
     <artifactId>java</artifactId>
-    <version>1.8.0-SNAPSHOT</version>
+    <version>${sdk.version.release}</version>
     <packaging>jar</packaging>
     <name>contentstack-java</name>
     <description>Java SDK for Contentstack Content Delivery API</description>
@@ -15,8 +14,8 @@
 
     <properties>
         <!--update sdk version before every release push for SNAPSHOT/RELEASE-->
-        <sdk.version.snapshot>v1.8.0</sdk.version.snapshot>
-        <sdk.version.release>v1.8.0</sdk.version.release>
+        <sdk.version.snapshot>1.8.1-SNAPSHOT</sdk.version.snapshot>
+        <sdk.version.release>1.8.1</sdk.version.release>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -24,15 +23,15 @@
         <maven-source-plugin.version>2.2.1</maven-source-plugin.version>
         <maven-javadoc-plugin.version>3.0.0</maven-javadoc-plugin.version>
         <dotenv-source.version>5.2.2</dotenv-source.version>
-        <rxjava-source.version>3.1.2</rxjava-source.version>
+        <rxjava-source.version>3.1.3</rxjava-source.version>
         <retrofit-source.version>2.9.0</retrofit-source.version>
         <converter-gson-source.version>2.9.0</converter-gson-source.version>
-        <loggin.version>4.9.2</loggin.version>
+        <loggin.version>4.9.3</loggin.version>
         <jococo-plugin.version>0.8.5</jococo-plugin.version>
         <lombok-source.version>1.18.22</lombok-source.version>
-        <junit-jupiter.version>5.8.1</junit-jupiter.version>
+        <junit-jupiter.version>5.8.2</junit-jupiter.version>
         <junit-jupiter-engine.version>5.8.0-M1</junit-jupiter-engine.version>
-        <junit-vintage-engine.version>5.8.1</junit-vintage-engine.version>
+        <junit-vintage-engine.version>5.8.2</junit-vintage-engine.version>
         <gson.version>2.8.8</gson.version>
         <json-simple-version>1.1.1</json-simple-version>
         <maven-site-plugin.version>3.3</maven-site-plugin.version>
@@ -57,7 +56,7 @@
         <url>https://github.com/contentstack/contentstack-java</url>
         <connection>scm:git:git://github.com/contentstack/contentstack-java.git</connection>
         <developerConnection>scm:git:ssh://github.com:contentstack/contentstack-java.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>java-1.8.0</tag>
     </scm>
 
     <issueManagement>
@@ -106,45 +105,53 @@
 
 
     <dependencies>
-<!--        <dependency>-->
-<!--            <groupId>com.contentstack.sdk</groupId>-->
-<!--            <artifactId>utils</artifactId>-->
-<!--            <version>${contentstack-utils-version}</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>com.contentstack.sdk</groupId>
+            <artifactId>utils</artifactId>
+            <version>${contentstack-utils-version}</version>
+            <scope>compile</scope>
+        </dependency>
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>${json-version}</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>io.github.cdimascio</groupId>
             <artifactId>java-dotenv</artifactId>
             <version>${dotenv-source.version}</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>io.reactivex.rxjava3</groupId>
             <artifactId>rxjava</artifactId>
             <version>${rxjava-source.version}</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.squareup.retrofit2</groupId>
             <artifactId>retrofit</artifactId>
             <version>${retrofit-source.version}</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.squareup.retrofit2</groupId>
             <artifactId>converter-gson</artifactId>
             <version>${converter-gson-source.version}</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>logging-interceptor</artifactId>
             <version>${loggin.version}</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok-source.version}</version>
+            <scope>compile</scope>
         </dependency>
         <!--JUnit 5 requires Java 8, you should make sure you have it ready in your environment.-->
         <dependency>
@@ -157,12 +164,14 @@
             <groupId>org.junit.vintage</groupId>
             <artifactId>junit-vintage-engine</artifactId>
             <version>${junit-vintage-engine.version}</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>com.googlecode.json-simple</groupId>
             <artifactId>json-simple</artifactId>
             <version>${json-simple-version}</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
