--- a/pom.xml
+++ b/pom.xml
@@ -20,13 +20,13 @@
         <surefire-report-plugin.version>2.22.0</surefire-report-plugin.version>
         <maven-source-plugin.version>2.2.1</maven-source-plugin.version>
         <maven-javadoc-plugin.version>3.3.2</maven-javadoc-plugin.version>
-        <dotenv-source.version>5.2.2</dotenv-source.version>
-        <rxjava-source.version>3.1.3</rxjava-source.version>
+        <dotenv-source.version>2.2.3</dotenv-source.version>
+        <rxjava-source.version>3.1.4</rxjava-source.version>
         <retrofit-source.version>2.9.0</retrofit-source.version>
         <converter-gson-source.version>2.9.0</converter-gson-source.version>
         <loggin.version>4.9.3</loggin.version>
         <jococo-plugin.version>0.8.5</jococo-plugin.version>
-        <lombok-source.version>1.18.22</lombok-source.version>
+        <lombok-source.version>1.18.24</lombok-source.version>
         <junit-jupiter.version>5.8.2</junit-jupiter.version>
         <junit-jupiter-engine.version>5.8.0-M1</junit-jupiter-engine.version>
         <junit-vintage-engine.version>5.8.2</junit-vintage-engine.version>
@@ -37,7 +37,7 @@
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <nexus-staging-maven-plugin.version>1.6.7</nexus-staging-maven-plugin.version>
         <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
-        <json-version>20211205</json-version>
+        <json-version>20220320</json-version>
         <jacoco-maven-plugin-version>0.8.7</jacoco-maven-plugin-version>
         <maven-release-plugin-version>2.5.3</maven-release-plugin-version>
         <nexus-staging-maven-plugin-version>1.6.7</nexus-staging-maven-plugin-version>
@@ -117,7 +117,7 @@
         </dependency>
         <dependency>
             <groupId>io.github.cdimascio</groupId>
-            <artifactId>java-dotenv</artifactId>
+            <artifactId>dotenv-java</artifactId>
             <version>${dotenv-source.version}</version>
             <scope>runtime</scope>
         </dependency>
