--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -5,6 +5,9 @@ on:
 jobs:
   publish-maven:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
       - uses: actions/checkout@v3
       - name: Set up Maven Central Repository
@@ -13,9 +16,9 @@ jobs:
           java-version: '8'
           distribution: 'adopt'
           server-id: shaileshmishra
-          server-username: MAVEN_USERNAME
-          server-password: MAVEN_PASSWORD
-          gpg-passphrase: GPG_PASSPHRASE
+          server-username: ${{ secrets.MAVEN_USERNAME }}
+          server-password: ${{ secrets.MAVEN_PASSWORD }}
+          gpg-passphrase: ${{ secrets.GPG_PASSPHRASE }}
       - name: Publish package
         run: mvn --batch-mode deploy
         env:
