--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.contentstack.sdk</groupId>
     <artifactId>java</artifactId>
-    <version>1.11.1.1</version>
+    <version>1.12.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>contentstack-java</name>
     <description>Java SDK for Contentstack Content Delivery API</description>
@@ -23,7 +23,7 @@
         <rxjava-source.version>3.1.6</rxjava-source.version>
         <retrofit-source.version>2.9.0</retrofit-source.version>
         <converter-gson-source.version>2.9.0</converter-gson-source.version>
-        <loggin.version>5.0.0-alpha.11</loggin.version>
+        <loggin.version>4.10.0</loggin.version>
         <jococo-plugin.version>0.8.5</jococo-plugin.version>
         <lombok-source.version>1.18.26</lombok-source.version>
         <junit-jupiter.version>5.9.2</junit-jupiter.version>
