--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.contentstack.sdk</groupId>
     <artifactId>java</artifactId>
-    <version>1.12.1-SNAPSHOT</version>
+    <version>1.12.2-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>contentstack-java</name>
     <description>Java SDK for Contentstack Content Delivery API</description>
@@ -22,7 +22,6 @@
         <dotenv-source.version>3.0.0</dotenv-source.version>
         <rxjava-source.version>3.1.6</rxjava-source.version>
         <retrofit-source.version>2.9.0</retrofit-source.version>
-        <converter-gson-source.version>2.9.0</converter-gson-source.version>
         <loggin.version>4.11.0</loggin.version>
         <jococo-plugin.version>0.8.5</jococo-plugin.version>
         <lombok-source.version>1.18.28</lombok-source.version>
@@ -37,7 +36,7 @@
         <json-version>20230227</json-version>
         <jacoco-maven-plugin-version>0.8.7</jacoco-maven-plugin-version>
         <maven-release-plugin-version>2.5.3</maven-release-plugin-version>
-        <contentstack-utils-version>1.2.2</contentstack-utils-version>
+        <contentstack-utils-version>1.2.3</contentstack-utils-version>
     </properties>
 
     <parent>
@@ -129,12 +128,13 @@
             <version>${retrofit-source.version}</version>
             <scope>compile</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.squareup.retrofit2/converter-gson -->
         <dependency>
             <groupId>com.squareup.retrofit2</groupId>
             <artifactId>converter-gson</artifactId>
-            <version>${converter-gson-source.version}</version>
-            <scope>compile</scope>
+            <version>${retrofit-source.version}</version>
         </dependency>
+
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>logging-interceptor</artifactId>
