--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,8 +1,8 @@
 name: Publish package to the Maven Central Repository
-on: [ push ]  # Trigger the workflow when a push (commit) event occurs
-#on:
-#  release:
-#    types: [ created ]
+#on: [ push ]  # Trigger the workflow when a push (commit) event occurs
+on:
+  release:
+    types: [ created ]
 jobs:
   publish-github:
     runs-on: ubuntu-latest
