--- a/.github/workflows/maven--package-publish.yml
+++ b/.github/workflows/maven--package-publish.yml
@@ -22,6 +22,6 @@ jobs:
           gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
           gpg-passphrase: ${{ secrets.GPG_PASSPHRASE }}
       - name: Publish package
-        run: mvn clean deploy -DaltDeploymentRepository=github::default::https://maven.pkg.github.com/contentstack/contentstack-java
+        run: mvn clean deploy
 
 #        run: mvn --batch-mode deploy
