GitHub Package Release

--- a/pom.xml
+++ b/pom.xml
@@ -313,8 +313,8 @@
                 <version>${nexus-staging-maven-plugin.version}</version>
                 <extensions>true</extensions>
                 <configuration>
-                    <serverId>ossrh</serverId>
-                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                    <serverId>github</serverId>
+                    <nexusUrl>https://maven.pkg.github.com/contentstack/contentstack-java</nexusUrl>
                     <autoReleaseAfterClose>true</autoReleaseAfterClose>
                 </configuration>
             </plugin>
