--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,11 @@
         <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
         <maven-javadoc-plugin.version>3.4.1</maven-javadoc-plugin.version>
         <dotenv-source.version>3.0.0</dotenv-source.version>
-        <rxjava-source.version>3.1.8</rxjava-source.version>
+        <rxjava-source.version>3.1.9</rxjava-source.version>
         <retrofit-source.version>2.11.0</retrofit-source.version>
         <loggin.version>5.0.0-alpha.11</loggin.version>
         <jococo-plugin.version>0.8.5</jococo-plugin.version>
-        <lombok-source.version>1.18.32</lombok-source.version>
+        <lombok-source.version>1.18.34</lombok-source.version>
         <junit-jupiter.version>5.10.1</junit-jupiter.version>
         <junit-jupiter-engine.version>5.8.0-M1</junit-jupiter-engine.version>
         <gson.version>2.8.8</gson.version>
@@ -36,7 +36,7 @@
         <json-version>20240303</json-version>
         <jacoco-maven-plugin-version>0.8.7</jacoco-maven-plugin-version>
         <maven-release-plugin-version>2.5.3</maven-release-plugin-version>
-        <contentstack-utils-version>1.2.7</contentstack-utils-version>
+        <contentstack-utils-version>1.2.12</contentstack-utils-version>
     </properties>
 
     <parent>
@@ -187,7 +187,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.15.2</version>
+            <version>2.18.0</version>
         </dependency>
     </dependencies>
 
@@ -251,7 +251,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
                 <configuration>
-                    <skipTests>true</skipTests>
+                    <!-- <skipTests>true</skipTests> -->
                 </configuration>
             </plugin>
 
