Add Slack reporting functionality and update dependencies
- Introduced SanityReport class to generate test summaries and send reports to Slack.
- Updated logging in CSHttpConnection to use logger instead of printStackTrace.
- Modified error handling in Entry class to check for empty error messages.
- Updated dependency versions in pom.xml and added new dependencies.
- Added test configuration properties to .gitignore.
- Created send-report.sh script for running tests and sending reports.

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,8 @@ local.properties
 .settings/
 .loadpath
 .recommenders
+# Ignore test configuration
+test-config.properties
 
 # External tool builders
 .externalToolBuilders/
