--- a/pom.xml
+++ b/pom.xml
@@ -196,6 +196,11 @@
             <artifactId>okhttp</artifactId>
             <version>4.12.0</version> 
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.36</version>
+        </dependency>
 
     </dependencies>
 
@@ -245,7 +250,7 @@
                             <use>false</use>
                             <source>1.8</source>
                             <links>
-                                <link>https://docs.oracle.com/javase/23/docs/api/</link>
+                                <link>https://docs.oracle.com/en/java/javase/23/docs/api/index.html</link>
                             </links>
                             <doclint>none</doclint>
                         </configuration>
