Add java-dotenv dependency and refactor Credentials class to use dotenv for environment variables

--- a/pom.xml
+++ b/pom.xml
@@ -201,6 +201,12 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.36</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.github.cdimascio/java-dotenv -->
+         <dependency>
+             <groupId>io.github.cdimascio</groupId>
+             <artifactId>java-dotenv</artifactId>
+             <version>5.2.2</version>
+         </dependency>
 
     </dependencies>
 
