--- a/pom.xml
+++ b/pom.xml
@@ -209,7 +209,16 @@
          </dependency>
 
     </dependencies>
-
+    
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-stdlib</artifactId>
+                <version>2.1.0</version> 
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     <build>
 
 
