--- a/pom.xml
+++ b/pom.xml
@@ -201,6 +201,12 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.36</version>
         </dependency>
+         <!-- https://mvnrepository.com/artifact/io.github.cdimascio/java-dotenv -->
+          <dependency>
+              <groupId>io.github.cdimascio</groupId>
+              <artifactId>java-dotenv</artifactId>
+              <version>5.2.2</version>
+          </dependency>
 
     </dependencies>
 
@@ -250,7 +256,7 @@
                             <use>false</use>
                             <source>1.8</source>
                             <links>
-                                <link>https://docs.oracle.com/en/java/javase/23/docs/api/index.html</link>
+                                <link>https://docs.oracle.com/en/java/javase/23/docs/api/</link>
                             </links>
                             <doclint>none</doclint>
                         </configuration>
@@ -263,7 +269,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
                 <configuration>
-                    <!-- <skipTests>true</skipTests> -->
+                    <skipTests>true</skipTests>
                 </configuration>
             </plugin>
 
